III-1493: Make label-select more generic and use it for oragnisations

--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -75,7 +75,7 @@
                   <strong>Labels</strong>
                 </td>
                 <td>
-                  <udb-label-select offer="place"
+                  <udb-label-select labels="place.labels"
                                     label-added="labelAdded(label)"
                                     label-removed="labelRemoved(label)"></udb-label-select>
                 </td>
