--- a/src/search/ui/place.directive.html
+++ b/src/search/ui/place.directive.html
@@ -141,7 +141,7 @@
 
         <div ng-if="resultViewer.eventProperties.labels.visible && event.labels" class="udb-labels">
           <span ng-hide="event.labels.length">Deze plaats is nog niet gelabeld.</span>
-          <udb-label-select offer="event"
+          <udb-label-select labels="event.labels"
                             label-added="placeCtrl.labelAdded(label)"
                             label-removed="placeCtrl.labelRemoved(label)">
           </udb-label-select>
