III-1493: Fix organisation label API calls
Also update labels in the select component when binding changes!

--- a/src/management/organizers/organizer-detail.html
+++ b/src/management/organizers/organizer-detail.html
@@ -68,8 +68,8 @@
         </div>
         <div class="col-md-10">
             <udb-label-select labels="odc.organizer.labels"
-                              label-added="odc.addLabel($tag)"
-                              label-removed="odc.deleteLabel($tag)"></udb-label-select>
+                              label-added="odc.addLabel(label)"
+                              label-removed="odc.deleteLabel(label)"></udb-label-select>
         </div>
     </div>
 </div>
