--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -526,7 +526,7 @@
               <div class="uploaded-image">
                 <div class="media" ng-class="{'main-image': ($index === 0)}">
                   <a class="media-left" href="#">
-                    <img ng-src="{{ image.thumbnailUrl }}" style="max-width: 50px; max-height: 50px;">
+                    <img ng-src="{{ image.thumbnailUrl }}?width=50&height=50" style="max-width: 50px; max-height: 50px;">
                   </a>
 
                   <div class="media-body">
