--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -90,7 +90,12 @@
               <tr ng-class="{muted: !place.image}">
                 <td><strong>Afbeelding</strong></td>
                 <td>
-                  <img ng-if="place.image" class="offer-image-thumbnail" ng-src="{{place.image}}"/>
+                  <img ng-if="place.image" class="offer-image-main" ng-src="{{place.image}}?width=400"/>
+                  <p>
+                    <span ng-repeat="image in place.images">
+                      <img ng-src="{{image.contentUrl}}?height=100" height="100" class="offer-image-thumbnail" />
+                    </span>
+                  </p>
                   <span ng-if="!place.image">Geen afbeelding</span>
                 </td>
               </tr>
