III-1623 changed ‘of monument’ to ‘of locatie’

--- a/src/dashboard/dashboard.html
+++ b/src/dashboard/dashboard.html
@@ -18,7 +18,7 @@
       <div class="panel panel-default no-new no-data" ng-hide="dash.pagedItemViewer.events.length">
         <div class="panel-body text-center">
           <p class="text-center">Je hebt nog geen items toegevoegd.
-            <span ng-if="dash.toggleAddOffer"><br/><a href="event">Een activiteit of monument toevoegen?</a></span>
+            <span ng-if="dash.toggleAddOffer"><br/><a href="event">Een activiteit of locatie toevoegen?</a></span>
           </p>
         </div>
       </div>
