--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -171,15 +171,15 @@
               </td>
             </tr>
             <tr ng-class="{muted: !event.image}">
-              <td><strong>Afbeelding</strong></td>
+              <td><strong>Afbeeldingen</strong></td>
               <td>
-                <img ng-if="event.image" class="offer-image-main" ng-src="{{event.image}}?width=400" />
+                <img ng-if="event.image" class="img-responsive" ng-src="{{::event.image}}?width=400" />
                 <p>
                   <span ng-repeat="image in event.images">
-                    <img ng-src="{{image.contentUrl}}?height=100" class="offer-image-thumbnail" />
+                    <img ng-src="{{::image.contentUrl}}?height=100" class="offer-image-thumbnail img-responsive" />
                   </span>
                 </p>
-                <span ng-if="!event.image">Geen afbeelding</span>
+                <span ng-if="!event.image">Geen afbeeldingen</span>
               </td>
             </tr>
             </tbody>
