--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -9,7 +9,7 @@
     </h2>
     <input type="text"
        focus-if="eventFormData.showStep5"
-       style="display:none"
+       class="hidden-input"
        udb-auto-scroll>
     <div class="row">
       <div class="col-sm-7">
