III-1676 change ‘Organisator’ to ‘Orgonisatie’

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -81,7 +81,7 @@
               </td>
             </tr>
             <tr ng-class="{muted: !event.organizer}">
-              <td><strong>Organisator</strong></td>
+              <td><strong>Organisatie</strong></td>
               <td>{{event.organizer.name}}</td>
             </tr>
             <tr class="rv-event-info-price" ng-class="{muted: !event.priceInfo.length}">
