--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -174,7 +174,7 @@
                           <div class="panel-body">
                             <p>Organisatie niet gevonden?</p>
                             <button type='button' class='btn btn-primary' ng-click="openOrganizerModal()">
-                              Nieuwe organisator toevoegen
+                              Nieuwe organisatie toevoegen
                             </button>
                           </div>
                         </div>
