--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -170,7 +170,7 @@
                 <span ng-if="!event.typicalAgeRange">Alle leeftijden</span>
               </td>
             </tr>
-            <tr ng-class="{muted: ::!event.image}">
+            <tr ng-class="::{muted: !event.image}">
               <td><strong>Afbeeldingen</strong></td>
               <td>
                 <img ng-if="::event.image" class="img-responsive" ng-src="{{::event.image}}?width=400" />
@@ -178,8 +178,8 @@
                   <span ng-repeat="image in ::event.images">
                     <img ng-src="{{::image.contentUrl}}?height=100" class="offer-image-thumbnail img-responsive" />
                   </span>
+                  <span ng-if="::!event.image">Geen afbeeldingen</span>
                 </p>
-                <span ng-if="::!event.image">Geen afbeeldingen</span>
               </td>
             </tr>
             </tbody>
