III-1670 revert changes of styling through media server for images

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -530,7 +530,7 @@
               <div class="uploaded-image">
                 <div class="media" ng-class="{'main-image': ($index === 0)}">
                   <a class="media-left" href="#">
-                    <img ng-src="{{ image.thumbnailUrl }}" style="max-width: 50px; max-height: 50px;">
+                    <img ng-src="{{ image.thumbnailUrl }}?width=50&height=50">
                   </a>
 
                   <div class="media-body">
