III-1683: Update migrate copy

--- a/src/migration/event-migration.html
+++ b/src/migration/event-migration.html
@@ -1,6 +1,6 @@
 <div class="offer-form" ng-if="loaded">
-    <div class="alert alert-info" role="alert">
-        Deze activiteit werd ingevoerd in de vorige versie van UiTdatabank.
+    <div class="alert alert-danger" role="alert">
+        <strong>Deze activiteit werd ingevoerd in de vorige versie van UiTdatabank.</strong><br>
         Om deze te kunnen bewerken, is het nodig om de eerder gekozen locatie en adres éénmalig opnieuw te selecteren of in te voeren.
     </div>
 
