--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -67,6 +67,9 @@
                                   label-added="labelAdded(label)"
                                   label-removed="labelRemoved(label)"
                                   ></udb-label-select>
+                <div ng-show="hasLabelsError" class="alert alert-danger">
+                  Het toevoegen van het label '{{labelsError.name}}' is niet gelukt.
+                </div>
               </td>
             </tr>
             <tr>
