--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -511,6 +511,7 @@
           </div>
         </div>
 
+        <udb-form-audience></udb-form-audience>
       </div>
 
       <div class="col-sm-5">
