--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -194,7 +194,7 @@
         <div class="row extra-contact">
           <div class="extra-task meer-info" ng-class="contactInfoCssClass">
             <div class="col-sm-3">
-              <em class="extra-task-label">Meer info &amp; contact</em>
+              <em class="extra-task-label">Contact &amp; reservatie</em>
               <span> </span>
               <i class="fa fa-circle-o-notch fa-spin" ng-show="savingContactInfo"></i>
             </div>
