III-1733 Fixed typo in ‘kappelletjes’, should have been ‘kapelletjes’.

--- a/src/event_form/steps/event-form-step4.html
+++ b/src/event_form/steps/event-form-step4.html
@@ -21,7 +21,7 @@
 
         <div class="help-block">
           <p>
-            <span ng-show="eventFormData.isEvent">Gebruik een <strong>sprekende titel</strong>, bv. "Fietsen langs kappelletjes", "De Sage van de Eenhoorn".</span>
+            <span ng-show="eventFormData.isEvent">Gebruik een <strong>sprekende titel</strong>, bv. "Fietsen langs kapelletjes", "De Sage van de Eenhoorn".</span>
             <span ng-show="eventFormData.isPlace">Gebruik de <strong>officiële benaming</strong>, bv. "Gravensteen", "Abdijsite Herkenrode", "Cultuurcentrum De Werf".</span>
             Een <strong>uitgebreide beschrijving</strong> kan je in stap 5 toevoegen.
           </p>
