--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -66,7 +66,7 @@
             </tr>
             <tr>
               <td><strong>Waar</strong></td>
-              <td ng-show="event.location.url"><a href="{{eventLocationUrl(event)}}">{{eventLocation(event)}}</a></td>
+              <td ng-show="event.location.url"><a ui-sref="split.footer.place-preview({id: event.location.id})">{{eventLocation(event)}}</a></td>
               <td ng-hide="event.location.url">
                 {{event.location.name.nl}},
                 {{event.location.address.streetAddress}},
