III-1734: Add contact and booking info components to place detail page

--- a/src/event-detail/ui/booking-info-detail.directive.html
+++ b/src/event-detail/ui/booking-info-detail.directive.html
@@ -14,5 +14,5 @@
             <li ng-if="::bookingInfo.email" ng-bind="::bookingInfo.email"></li>
         </ul>
     </td>
-    <td ng-if="::isEmpty(bookingInfo)"></td>
+    <td ng-if="::isEmpty(bookingInfo)">Geen reservatie info</td>
 </tr>
