III-1734: Additional one-way-bindings

--- a/src/event-detail/ui/event-detail.html
+++ b/src/event-detail/ui/event-detail.html
@@ -106,8 +106,8 @@
                 </td>
               </tr>
             </tbody>
-            <tbody udb-booking-info-detail="event.bookingInfo"></tbody>
-            <tbody udb-contact-point-detail="event.contactPoint"></tbody>
+            <tbody udb-booking-info-detail="::event.bookingInfo"></tbody>
+            <tbody udb-contact-point-detail="::event.contactPoint"></tbody>
             <tbody>
               <tr>
                 <td>
