--- a/src/place-detail/ui/place-detail.html
+++ b/src/place-detail/ui/place-detail.html
@@ -71,8 +71,8 @@
                   {{place.address.addressCountry}}</td>
               </tr>
             </tbody>
-            <tbody udb-booking-info-detail="place.bookingInfo"></tbody>
-            <tbody udb-contact-point-detail="place.contactPoint"></tbody>
+            <tbody udb-booking-info-detail="::place.bookingInfo"></tbody>
+            <tbody udb-contact-point-detail="::place.contactPoint"></tbody>
             <tbody>
               <tr>
                 <td>
