--- a/src/event-detail/ui/booking-info-detail.directive.html
+++ b/src/event-detail/ui/booking-info-detail.directive.html
@@ -6,7 +6,7 @@
         <ul class="list-unstyled" >
             <li ng-if="::bookingInfo.url">
                     <span>
-                      <a class="btn btn-info" target="_blank" ng-href="{{bookingInfo.url}}"
+                      <a class="btn btn-info" target="_blank" ng-href="{{::bookingInfo.url}}"
                          ng-bind="::bookingInfo.urlLabel"></a>
                     </span>
             </li>
