--- a/src/event-detail/ui/contact-point-detail.directive.html
+++ b/src/event-detail/ui/contact-point-detail.directive.html
@@ -6,20 +6,20 @@
         <ul class="list-unstyled">
             <li>
                     <span ng-repeat="website in ::contactPoint.url">
-                      <a ng-href="{{website}}" target="_blank" ng-bind="::website"></a>
-                      <span ng-if="!$last">of </span>
+                      <a ng-href="{{::website}}" target="_blank" ng-bind="::website"></a>
+                      <span ng-if="::!$last">of </span>
                     </span>
             </li>
             <li>
                     <span ng-repeat="phone in ::contactPoint.phone">
                       <span ng-bind="::phone"></span>
-                      <span ng-if="!$last">of </span>
+                      <span ng-if="::!$last">of </span>
                     </span>
             </li>
             <li>
                     <span ng-repeat="email in ::contactPoint.email">
                       <span ng-bind="::email"></span>
-                      <span ng-if="!$last">of </span>
+                      <span ng-if="::!$last">of </span>
                     </span>
             </li>
         </ul>
