III-1745 Added missing price info.

--- a/src/event_form/steps/event-form-step5.html
+++ b/src/event_form/steps/event-form-step5.html
@@ -191,6 +191,9 @@
           </div>
         </div>
 
+        <price-info price="price"></price-info>
+        <uitpas-info organizer="eventFormData.organizer" price="price"></uitpas-info>
+
         <div class="row extra-contact">
           <div class="extra-task meer-info" ng-class="contactInfoCssClass">
             <div class="col-sm-3">
