III-1736: Wrap migration in a conditional step

--- a/src/duplication/event-duplication.html
+++ b/src/duplication/event-duplication.html
@@ -1,10 +1,5 @@
 <div class="offer-form" ng-if="loaded">
-    <div class="alert alert-danger" role="alert">
-        <strong>Deze activiteit werd ingevoerd in de vorige versie van UiTdatabank.</strong><br>
-        Om deze te kunnen bewerken, is het nodig om de eerder gekozen locatie en adres éénmalig opnieuw te selecteren of in te voeren.
-    </div>
-
-    <udb-event-form-step3></udb-event-form-step3>
+    <udb-event-migration-step></udb-event-migration-step>
 
     <udb-event-duplication-step></udb-event-duplication-step>
 
