--- a/src/duplication/event-duplication-calendar.directive.html
+++ b/src/duplication/event-duplication-calendar.directive.html
@@ -1,4 +1,3 @@
-<a name="wanneer"></a>
 <section id="wanneer">
     <h2 class="title-border">
         <span>Wanneer vindt dit evenement of deze activiteit plaats?</span>
@@ -8,7 +7,9 @@
         <div class="col-xs-12">
             <div class="form-group">
 
-                <label class="wanneerkiezer-label" ng-show="edc.eventFormData.activeCalendarType === ''">Maak een keuze</label>
+                <label class="wanneerkiezer-label" ng-show="edc.eventFormData.activeCalendarType === ''">
+                    Maak een keuze
+                </label>
                 <div class="wanneerkiezer" ng-show="edc.eventFormData.activeCalendarType === ''">
                     <ul class="list-inline button-list">
                         <li ng-repeat="calendarLabel in ::edc.calendarLabels">
@@ -20,8 +21,8 @@
                     </ul>
                 </div>
                 <div class="wanneer-chosen" ng-hide="edc.eventFormData.activeCalendarType === ''">
-        <span class="btn-chosen" ng-bind="edc.eventFormData.activeCalendarLabel">
-        </span><a class="btn btn-link wanneerrestore" href="#" ng-click="edc.eventFormData.resetCalendar()">Wijzigen</a>
+                    <span class="btn-chosen" ng-bind="edc.eventFormData.activeCalendarLabel"></span>
+                    <a class="btn btn-link wanneerrestore" href="#" ng-click="edc.eventFormData.resetCalendar()">Wijzigen</a>
                 </div>
             </div>
         </div>
