III-1736: Remap event-form-timestamp bindings to event-form

--- a/src/event_form/steps/event-form-step2.html
+++ b/src/event_form/steps/event-form-step2.html
@@ -32,7 +32,7 @@
     </div>
 
     <div class="row" ng-show="eventFormData.activeCalendarType === 'single'">
-      <udb-event-form-timestamp></udb-event-form-timestamp>
+      <udb-event-form-timestamp form-data="eventFormData"></udb-event-form-timestamp>
     </div>
 
     <div class="row" ng-show="eventFormData.activeCalendarType === 'periodic'">
