--- a/src/duplication/event-duplication-calendar.directive.html
+++ b/src/duplication/event-duplication-calendar.directive.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="row" ng-show="edc.duplicateFormData.activeCalendarType === 'single'">
-        <udb-event-form-timestamp></udb-event-form-timestamp>
+        <udb-event-form-timestamp form-data="edc.duplicateFormData"></udb-event-form-timestamp>
     </div>
 
     <div class="row" ng-show="edc.duplicateFormData.activeCalendarType === 'periodic'">
