III-1736: Remap event-form-period bindings to event-form

--- a/src/duplication/event-duplication-calendar.directive.html
+++ b/src/duplication/event-duplication-calendar.directive.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="row" ng-show="edc.duplicateFormData.activeCalendarType === 'periodic'">
-        <udb-event-form-period></udb-event-form-period>
+        <udb-event-form-period form-data="edc.duplicateFormData"></udb-event-form-period>
     </div>
 
     <div class="row" ng-show="edc.duplicateFormData.activeCalendarType === 'permanent' || edc.duplicateFormData.activeCalendarType === 'periodic'">
